tests/patsyn/should_compile/T14380.hs
{-# LANGUAGE OverloadedLists #-}
{-# LANGUAGE PatternSynonyms #-}

module T14380 where

data Foo = Foo [Int]
pattern Bar :: Foo
pattern Bar = Foo []
