tests/patsyn/should_fail/T16900.hs
{-# LANGUAGE PatternSynonyms #-}
module T16900 where

pattern P1 = P2
pattern P2 = P1
